--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 
 <body>
-<img width="100%" height="100%" src="images/tesseract.png">
-
+<img  src="images/tesseract.png">
+<h1>Hello world!</h1>
 </body>
