--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 
 <body>
-<img  src="images/cons.jpg">
+<img  src="images/cons.jpg" height="100%" width="100%">
 <h1>Hello world</h1>
 </body>
