--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
-<head>
-<title></title>
-</head>
-
-<body>
-<img  src="images/cons.jpg" height="100%" width="100%">
-<h1>Hello world</h1>
-</body>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>WebGl</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./public/index.css">
+        <script src="./public/gl-matrix-min.js" defer></script>
+        <script src="./public/index.js" defer></script>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <canvas></canvas>
+        <script>
+            const _c=document.getElementsByTagName('canvas')[0];
+            _c.width=window.innerWidth;
+            _c.height=window.innerHeight;
+        </script>
+        <script src="" async defer></script>
+    </body>
+</html>
